--- a/public/styles.css
+++ b/public/styles.css
@@ -1,17 +1,23 @@
-.relative .text-content {
+.img-container .text-content {
     opacity: 0;
     transition: opacity 0.5s ease;
 }
 
-.relative:hover .text-content {
+.img-container:hover .text-content {
     opacity: 1;
 }
 
-.relative img {
+.img-container img {
     transition: transform 0.5s ease, opacity 0.5s ease;
 }
 
-.relative:hover img {
+.img-container:hover img {
     transform: scale(1.25);
-    opacity: 0.2;
+    opacity: 0.03;
+}
+
+.img-container:hover {
+    background: transparent;
+    /* --tw-bg-opacity: 0.01;
+    background-color: rgb(30 41 59 / var(--tw-bg-opacity)) /* #1e293b */; */
 }
